fix callout gap

--- a/packages/scss/src/components/callout/vars.scss
+++ b/packages/scss/src/components/callout/vars.scss
@@ -1,5 +1,5 @@
 @mixin vars {
-	--components-callout-gap: var(--pr-t-spacings-75);
+	--components-callout-gap: var(--pr-t-spacings-150);
 	--components-callout-display: flex;
 	--components-callout-padding: var(--spacings-XS) var(--pr-t-spacings-150);
 	--components-callout-fontSize: inherit;
